# agentkit

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agentkit/: __init__.py  __main__.py  agent.py  claude.py  cli.py  config.py  context.py  daemon.py  mailbox.py  memory.py  telegram_bot.py
agentkit/tools/: __init__.py  base.py  shell.py
docker/: entrypoint.sh
memory/: MEMORY.md
profiles/playground/: evaluation.md  heartbeat.md  identity.md  tools.md
scripts/: battle-judge.sh  evaluate-battle.sh  spy-report.sh  spy.sh
skills/add-playground/: SKILL.md
skills/add-profile/: SKILL.md
skills/add-scheduler/: SKILL.md
skills/add-self-evolution/: SKILL.md
skills/add-telegram/: SKILL.md
tests/: conftest.py  test_agent.py  test_claude.py  test_cli.py  test_config.py  test_context.py  test_daemon.py  test_e2e_cron.py  test_mailbox.py  test_memory.py  test_telegram.py  test_tools.py
