[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkit"
version = "0.1.0"
description = "Minimal autonomous agent framework wrapping Claude Code CLI"
requires-python = ">=3.11"
dependencies = ["python-telegram-bot>=21.0"]

[project.scripts]
agentkit = "agentkit.cli:main"

[tool.setuptools.packages.find]
include = ["agentkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
