[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit"
version = "0.1.0"
description = "Minimal autonomous agent framework wrapping Claude Code CLI"
requires-python = ">=3.11"
dependencies = ["python-telegram-bot>=21.0"]

[project.scripts]
agentkit = "agentkit.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["agentkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
